[package]
name = "san-rs"
version = "0.1.0"
authors = ["Erol Gorancic"]
edition = "2018"
description = "A library for parsing standard algebraic notation (SAN)"
repository = "https://github.com/ergor/libsan-rs"
readme = "README.md"
keywords = ["chess", "san", "standard", "algebraic", "notation"]
categories = ["parsing", "data-structures"]
license = "GPL-3.0-only"

[dependencies]
regex = "^1.1.9"
